# KeTCindyInstaller

./: .gitignore  Cargo.toml  README.md  lefthook.yml
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml  rustdoc.yml
manifests/: cinderella.toml  ketcindy.toml  maxima.toml  r.toml
presentation/ketcindy/20241003/: llmk.toml  main.tex
src/: argument_parser.rs  config.rs  lib.rs  main.rs  manifest_manager.rs  manifest_parser.rs  package_manager.rs  system_config.rs
src/config/: system_config.rs
src/config/system_config/: graphic.rs  language.rs  texengine.rs
src/system_config/: graphic.rs  texused.rs
