[package]
name = "ketcindyinstaller"
version = "0.1.0"
authors = ["NXVZBGBFBEN <nxvzbgbfben@gmail.com>"]
edition = "2021"
description = "A simple package manager for KeTCindy projects"

[[bin]]
name = "ketpm"
path = "src/main.rs"

[build]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
directories = "5.0.1"
indicatif = "0.17.8"
platform-dirs = "0.3.0"
reqwest = "0.12.5"
serde = { version = "1.0.209", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
url = "2.5.2"
